fixed awkward side menu layout overlaping issues

--- a/sass/block/_profile.scss
+++ b/sass/block/_profile.scss
@@ -83,7 +83,9 @@
   @media (min-width: 180ch) {
     position: fixed;
     right: 2vmin;
-    bottom: 2vmin;
+    top: 50%;
+    bottom: auto;
+    transform: translateY(-50%);
     max-width: 30ch;
     margin-bottom: 0;
     border-radius: var(--border-radius);
